Add plugin versions