@@ -13,6 +13,8 @@
 
   <properties>
     <databricks-jdbc.version>2.6.34</databricks-jdbc.version>
+    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+    <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
   </properties>
 
 
@@ -35,6 +37,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven-compiler-plugin.version}</version>
             <configuration>
               <source>11</source>
               <target>11</target>
@@ -53,9 +56,29 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven-compiler-plugin.version}</version>
             <configuration>
               <source>17</source>
               <target>17</target>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven-surefire-plugin.version}</version>
+            <configuration>
+              <argLine>
+                --add-opens java.base/java.nio=ALL-UNNAMED
+                --add-opens java.management/java.lang.management=ALL-UNNAMED
+                --add-opens=java.management/sun.management=ALL-UNNAMED
+                --add-opens java.base/java.util=ALL-UNNAMED
+                --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                --add-opens java.base/java.time.format=ALL-UNNAMED
+                --add-opens java.base/java.time.temporal=ALL-UNNAMED
+                --add-opens java.base/java.time=ALL-UNNAMED
+                --add-opens java.base/java.lang=ALL-UNNAMED
+                --add-opens java.logging/java.util.logging=ALL-UNNAMED
+              </argLine>
             </configuration>
           </plugin>
         </plugins>
